Enum socialType{
  facebook,
  youtube
}

Enum linkType{
  image_and_video,
  image,
  video
}

Enum myPost{
  image,
  video
}

Table users {
  id int [pk, increment]
  email varchar
  user_name varchar
  password varchar [not null]
  remember_me_token varchar
  updated_at timestamp
  created_at timestamp
  deleted_at timestamp
}

Table api_tokens {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  name varchar [not null]
  type varchar [not null]
  token varchar [not null]
  expires_at timestamp
  created_at timestamp
}

Table accounts {
  id int [pk, increment]
  social socialType [not null]
  name varchar [not null]
  accountId int [not null, ref: > userId.id]
  password varchar [not null]
}

Table categories {
  id int [pk, increment]
  name varchar
  slug varchar
  description varchar
  parentId [not null]
}

Table articles {
  id int [pk, increment]
  accountId int [not null, ref: > accounts.id]
  categoryId int [not null, ref: > categories.id]
  description varchar
  text varchar
  images varchar
  videos varchar
  userIdCreated int [ref: > users.id]
}

Table article_image {
  id int [pk, increment]
  articleId int [not null, ref: > articles.id]
  imageId int [not null, ref: > images.id]
}

Table article_video {
  id int [pk, increment]
  articleId int [not null, ref: > articles.id]
  videoId int [not null, ref: > videos.id]
}

Table images {
  id int [pk, increment]
  url varchar [not null]
  thumb varchar
  userIdCreated int [ref: > users.id]
  categoryId int [not null, ref: > categories.id]
}

Table videos {
  id int [pk, increment]
  url varchar [not null]
  thumb varchar
  userIdCreated int [ref: > users.id]
  categoryId int [not null, ref: > categories.id]
}
